force-app/main/default/objects/Commission_Rule__c/Commission_Rule__c.object-meta.xml
<CustomObject>
    <description>Commission rules defining tiered rates and role-based splits</description>
    <label>Commission Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>