force-app/main/default/objects/Commission_Rule__c/fields/Commission_Plan__c.field-meta.xml
<CustomField>
    <fullName>Commission_Plan__c</fullName>
    <description>Parent commission plan</description>
    <label>Commission Plan</label>
    <referenceTo>Commission_Plan__c</referenceTo>
    <relationshipLabel>Commission Rules</relationshipLabel>
    <relationshipName>Commission_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>