force-app/main/default/objects/Commission_Rule__c/fields/Max_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Amount__c</fullName>
    <description>Maximum deal amount for this tier (inclusive)</description>
    <label>Max Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>