force-app/main/default/objects/Commission_Rule__c/fields/Min_Amount__c.field-meta.xml
<CustomField>
    <fullName>Min_Amount__c</fullName>
    <description>Minimum deal amount for this tier (inclusive)</description>
    <label>Min Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>