force-app/main/default/objects/Commission_Rule__c/fields/Split_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Split_Percentage__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Percentage of commission allocated to this role</description>
    <label>Split Percentage</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>